Commit section 2 lectures

--- a/section2/my-second-app/src/app/app.component.html
+++ b/section2/my-second-app/src/app/app.component.html
@@ -25,6 +25,8 @@ Combination of both
             <app-warning-alert></app-warning-alert>
             <hr/>
             <app-user-manager></app-user-manager>
+            <hr/>
+            <app-detail-display></app-detail-display>
         </div>
     </div>
 </div>
