--- a/section2/my-second-app/src/app/server/server.component.html
+++ b/section2/my-second-app/src/app/server/server.component.html
@@ -1,4 +1,5 @@
 <!-- Any value that can resolve to a string can be placed within the string interpolation binding. -->
 <!-- Attribute directives don't add or remove elements, they only change the element on which they were placed. 
 ngStyle is an example of an attribute directive.-->
-<p [ngStyle]="{background: getColor()}">{{ 'Server' }} with ID {{ id }} is {{ getServerStatus() }}.</p>
+<p [ngStyle]="{background: getColor()}"
+   [ngClass]="{online: status === 'online'}">{{ 'Server' }} with ID {{ id }} is {{ getServerStatus() }}.</p>
