--- a/server-manager/src/app/server-element/server-element.component.html
+++ b/server-manager/src/app/server-element/server-element.component.html
@@ -1,11 +1,7 @@
 <div class="panel panel-default">
-  <div class="panel-heading">{{ serverElement.name }}</div>
+  <div class="panel-heading"
+       #header>{{ element.name }}</div>
   <div class="panel-body">
-    <p>
-      <strong *ngIf="serverElement.type === 'server'"
-              style="color: red;">{{ serverElement.content }}</strong>
-      <em *ngIf="serverElement.type === 'blueprint'"
-          style="color: blue">{{ serverElement.content }}</em>
-    </p>
+    <ng-content></ng-content>
   </div>
 </div>
