Add header functionality.

--- a/my-pantry/src/app/header/header.component.html
+++ b/my-pantry/src/app/header/header.component.html
@@ -8,10 +8,12 @@
         <div class="navbar-default">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="#">Recipes</a>
+                    <a href="#"
+                       (click)="onRecipesClick()">Recipes</a>
                 </li>
                 <li>
-                    <a href="#">Shopping List</a>
+                    <a href="#"
+                       (click)="onShoppingListClick()">Shopping List</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
