--- a/my-pantry/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/my-pantry/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,13 +1,14 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src=""
+    <img src="{{ recipe.imagePath }}"
          alt=""
-         class="img-responsive">
+         class="img-responsive"
+         style="max-height: 300px;">
   </div>
 </div>
 <div class="row">
   <div class="col-xs-5">
-    <h1>Recipe Name</h1>
+    <h1>{{ recipe.name }}</h1>
   </div>
 </div>
 <div class="row">
@@ -28,7 +29,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Description
+    {{ recipe.description }}
   </div>
 </div>
 <div class="row">
