--- a/my-pantry/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/my-pantry/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -6,23 +6,28 @@
           <label for="name">Name</label>
           <input type="text"
                  id="name"
-                 class="form-control" />
+                 class="form-control"
+                 #nameInput />
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
           <input type="number"
                  id="amount"
-                 class="form-control">
+                 class="form-control"
+                 #amountInput />
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
           <button class="btn btn-success"
-                  type="submit">Add</button>
+                  type="submit"
+                  (click)="onAdd()">Add</button>
           <button class="btn btn-danger"
-                  type="button">Delete</button>
+                  type="button"
+                  (click)="onDelete()">Delete</button>
           <button class="btn btn-primary"
-                  type="button">Clear</button>
+                  type="button"
+                  (click)="onClear()">Clear</button>
         </div>
       </div>
     </form>
