--- a/my-pantry/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/my-pantry/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -20,10 +20,15 @@
       </button>
       <ul class="dropdown-menu">
         <li>
-          <a href="#"
+          <a style="cursor: pointer;"
              (click)="onAddIngredientsToShoppingList()">To Shopping List</a>
-          <a href="#">Edit Recipe</a>
-          <a href="#">Delete Recipe</a>
+        </li>
+        <li>
+          <a style="cursor: pointer;"
+             (click)="onEditRecipe()">Edit Recipe</a>
+        </li>
+        <li>
+          <a style="cursor: pointer;">Delete Recipe</a>
         </li>
       </ul>
     </div>
