--- a/my-pantry/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/my-pantry/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,6 @@
-<a href="#"
+<a style="cursor: pointer;"
+   [routerLink]="['/recipes', id]"
+   routerLinkActive="active"
    class="list-group-item clearfix"
    (click)="onSelected()">
   <div class="pull-left">
