--- a/my-pantry/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/my-pantry/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,12 +1,17 @@
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-success">New Recipe</button>
+        <button class="btn btn-success"
+                (click)="onNewRecipe()">New Recipe</button>
     </div>
 </div>
 <hr>
 <div class="row">
     <div class="col-xs-12">
-        <app-recipe-item *ngFor="let recipeElement of recipes"
-                         [recipe]="recipeElement"></app-recipe-item>
+        <app-recipe-item *ngFor="let recipeElement of recipes; let i = index"
+                         [recipe]="recipeElement"
+                         [id]="i"></app-recipe-item>
+        <!-- <app-recipe-item *ngFor="let recipeElement of recipes; let i = index"
+                         [recipe]="recipeElement"
+                         [routerLink]="['/recipes', i]"></app-recipe-item> -->
     </div>
 </div>
