Add Observables to the my pantry application.

--- a/my-pantry/src/app/header/header.component.html
+++ b/my-pantry/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a href="#"
+            <a routerLink="/"
                class="navbar-brand">Recipe Book</a>
         </div>
 
